# mandelbrot-explorer

./: Cargo.toml  README.md
android/: Cargo.toml
android/src/: lib.rs
core/: Cargo.toml
core/res/: frag.glsl  vert.glsl
core/src/: lib.rs  shader.rs
desktop/: Cargo.toml
desktop/src/: main.rs
res/: frag.glsl
src/: gui.rs  lib.rs  main.rs  main.wgsl  shader.rs
src/lib/: shader.rs
