[package]
name = "mandelbrot-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12.1", features = ["derive"] }
rug = { version = "1.17.0", default-features = false, features = ["serde", "float"] }
itertools = "0.10.5"

[dependencies.srs2dge]
#default-features = false
#features = ["all"]
git = "https://github.com/Overpeek/srs2dge"
rev = "cb54dc8"
