[package]
name = "mandelbrot-explorer-android"
version = "0.1.0"
authors = ["Overpeek <overpeek.fin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
log = "~0.4"
android_logger = "~0.10"
ndk-glue = { version = "~0.3", features = [ "logger" ] }
mandelbrot-explorer-core = { path = "../core" }

[package.metadata.android]
apk_name = "mandelbrot-explorer"
label = "Mandelbrot Explorer"
runtime_libs = "lib/"
build_targets = [ "aarch64-linux-android", "x86_64-linux-android" ]

[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 1
