[package]
name = "mandelbrot-explorer-core"
version = "0.1.0"
authors = ["Overpeek <overpeek.fin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
fp64 = []

[dependencies]
log = "~0.4"
parking_lot = "~0.11"
winit = "~0.25"
gears = { path = "../../gears/gears" }
# gears = { path = "https://github.com/Overpeek/gears" }