[package]
name = "mandelbrot-explorer-desktop"
version = "0.1.0"
authors = ["Overpeek <overpeek.fin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "~0.9"
mandelbrot-explorer-core = { path = "../core", features = [ "fp64" ] }